--- a/Android/veRTC_Demo_Android/scene-core/build.gradle
+++ b/Android/veRTC_Demo_Android/scene-core/build.gradle
@@ -13,8 +13,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
 
-        ensureProperty('LOGIN_URL')
-        buildConfigField('String', 'LOGIN_URL', "\"${project.LOGIN_URL}\"")
+        ensureProperty('HEAD_URL')
+        buildConfigField('String', 'HEAD_URL', "\"${project.HEAD_URL}\"")
     }
 
     buildTypes {
@@ -48,7 +48,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     api(name: 'BasicModule', ext: 'aar')
-    api(name: 'ByteEffect', ext: 'aar')
 
     api "com.volcengine:VolcEngineRTC:$VOLCENGINE"
 
