--- a/Web/package.json
+++ b/Web/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@reduxjs/toolkit": "^1.8.5",
-    "@volcengine/rtc": "4.60.3",
+    "@volcengine/rtc": "~4.66.13",
     "@volcengine/tos-sdk": "^2.1.17",
-    "@volcengine/white-board-manage": "1.8.5-rc.0",
+    "@volcengine/white-board-manage": "1.8.6-rc.0",
     "antd": "^4.23.2",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
