--- a/Web/package.json
+++ b/Web/package.json
@@ -10,7 +10,7 @@
     "@volcengine/white-board-manage": "1.8.6-rc.0",
     "antd": "^4.23.2",
     "classnames": "^2.3.2",
-    "react": "^18.2.0",
+    "react": "18.3.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
     "react-redux": "^8.0.4",
@@ -46,7 +46,7 @@
   "devDependencies": {
     "@craco/craco": "^6.4.5",
     "@types/node": "^16.11.45",
-    "@types/react": "^18.0.15",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -63,7 +63,7 @@
     "stylelint": "^14.16.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^26.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "4.9.5"
   },
   "templateVersion": {
     "lint": 1
